Добавлен роут статистики, добавлен hot reload для приложения
